Create telegramm bot for all comand add migration v1.0